--- a/Index.html
+++ b/Index.html
@@ -209,8 +209,8 @@ loop()
         <div class="d-block w-70 text-dark" style="background-color: lightgrey; height: 350px; margin: 20px; border-radius: 25px ; padding: 25px;" >      
            <img src="img/tfake.jpg" alt="Avatar" style="width:90px; float:left; margin-right: 20px; border-radius: 50%;">
           <p>The product is amazing!. I no longer feel like i am dying while urinating, and i no longer use the bathroom every ten minuites. 
-          This has done amazing things for me       <p>
-            <p>Thank you!</p>
+          This has done amazing things for me </p>
+           <p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -228,7 +228,7 @@ loop()
            <img src="img/police.png" alt="Avatar" style="width:90px; float:left; margin-right: 20px; border-radius: 50%;">
           <p>This is simply amazing. No more burning sensation while urinating and no more frequent urination. I've tried a lot of prostate supplement and i can honestly say this is the best i have tried </p>
           <p>
-            <p>Thank you!</p>
+            
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -247,7 +247,7 @@ loop()
           <p>Everything is dialled in and my urine flow running smoothly.
                I have been in control and a sense of calm has  wash over me.</p>
           <p>
-            <p>Thank you!</p>
+            
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
