--- a/Index.html
+++ b/Index.html
@@ -90,7 +90,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div style="margin:5px">Get evidence-based treatment and solutions that helps to provide relief for people who suffer from Prostate enlargement, infections and prostatitis,
  or need to put and an end to their frequent urination</div>
  <div style="background-color: lightgrey; height: 350px; margin: 20px; border-radius: 25px ; padding: 25px;"><br>
-<div class="percent"><span class="dot"></span><br><br>
+<div class="percent"><span class="dot"></span><br><br><br>
 <h2 class="game"><b>94% of Our Patients Report Symptons Relief</h2>
 <p class="game">You 'll receive whole person care from urologist and health specialist</p> </b></div></div>
 <header class="page-header header container-fluid">
