--- a/Index.html
+++ b/Index.html
@@ -68,7 +68,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <nav class="navbar navbar-expand-md">
    <a class="navbar-brand" href="index.html">
-   <img class="logo" src="img/logo.png" alt="PROSTATE SOLUTION"/></a>
+   <img class="logo" src="img/logo.png" alt="Prostate Wel"/></a>
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
       	   <span class="navbar-toggler-icon"></span>
    </button>
@@ -291,7 +291,7 @@ loop()
 <li><strong> Kidney Damage.</strong></li>
 </ul></b>
 <h6 class="bph"><b><center><strong>Little Known Prostate Normalising Therapy</center></b></strong></h6>
-<h2 class="therapy"><center> "PROSTATE SOLUTION"-A 21-Day Therapy For Enlarged Prostate</center></h2>
+<h2 class="therapy"><center> "Prostate Wel"-A 21-Day Therapy For Enlarged Prostate</center></h2>
 <h6 class="bph"><b><center><strong>Recommended by Over 85% Of It Users</strong></center></center></b></h6>
    <img class="brand" src="img/psd.jpg"/>
 <a href="https://api.whatsapp.com/send?phone=2349155038724&text=Good%20day%20Are%20you%20intrested%20in%20getting%20your%20enlarged%20prostate%20shrink.">
@@ -354,12 +354,12 @@ loop()
 <p >If you would shrink your enlarged prostate, or probably low your PSA LEVEL &#8230;</p>
  <p>Then this will be the most exciting message you&rsquo;ll ever read.</p>
 <div class="col-xxl-7 col-xl-8 col-md-9 moneybag-list">
-        <p><em>Getting PROSTATE SOLUTION today you will enjoy all this benefit</em></p>
+        <p><em>Getting Prostate Wel today you will enjoy all this benefit</em></p>
 <ul class="styled-list">
 <li><strong>A PERSONAL ONLINE UROLOGIST that would keep check on you till you are totally whole</strong></li>
 <li><strong>A PERSONLIZED DIET PLAN  for prostatitis of different psa level</strong></li>
 <li><strong>TEXT SUPPORT WHILE USING THE PROSTATE MEDICATION</strong></li>
-<li class="buynow"><strong>YOU TOO COULD GET THE PROMOTION YOU DESIRE, GET RID OF THE SHAME, HAVE MORE BEDTIME, ENJOY NIGHT TIME WITH YOUR SPOUSE JUST BY GETTING THE PROSTATE SOLUTION</strong></li>
+<li class="buynow"><strong>YOU TOO COULD GET THE PROMOTION YOU DESIRE, GET RID OF THE SHAME, HAVE MORE BEDTIME, ENJOY NIGHT TIME WITH YOUR SPOUSE JUST BY GETTING THE Prostate Wel</strong></li>
 </ul></p></div></h2></h2>
  <h3><center>Clinical Strenght</center></h3>
  <h3 class="offer"> ENJOY MASSIVE DISCOUNT <br>
@@ -500,15 +500,15 @@ loop()
  </div>
  <h3><center>Choose Quantity Required</center></h3>
  <input type="radio" name="amount" value="1bottle" id="1bottle" />
- <label  for="1bottle"><span></span><b>One bottle of the PROSTATE SOLUTION &#8358 20,000</b> </label>
+ <label  for="1bottle"><span></span><b>One bottle of the Prostate Wel &#8358 20,000</b> </label>
  <input type="radio" name="amount" value="2bottle" id="2bottle" />
- <label for="2bottle"><span></span><b>Two bottles of the PROSTATE SOLUTION &#8358 30,000</b></label>
+ <label for="2bottle"><span></span><b>Two bottles of the Prostate Wel &#8358 30,000</b></label>
  
  <input type="radio" name="amount" value="3bottle" id="3bottle" />
- <label for="3bottle"><span></span><b> Three bottles of the PROSTATE SOLUTION &#8358 40,000</b> </label>
+ <label for="3bottle"><span></span><b> Three bottles of the Prostate Wel &#8358 40,000</b> </label>
  
  <input type="radio" name="amount" value="4bottle" id="4bottle" />
- <label for="4bottle"><span></span><b> Four bottles of the PROSTATE SOLUTION &#8358 50,000</b> </label>
+ <label for="4bottle"><span></span><b> Four bottles of the Prostate Wel &#8358 50,000</b> </label>
  
  
  <div class="input-cnt">
@@ -535,16 +535,16 @@ loop()
                <b> OUR PRODUCT HAS BEEN SOLD IN OVER 30 STATES IN NIGERIA AND ACROSS 3 COUNTRIES</b></h3>
 </div>
 <div class="col-xxl-7 col-xl-8 col-md-9 moneybag-list">
-        <p><em>And we&rsquo;ve also used the PROSTATE SOLUTION to&hellip;</em></p>
+        <p><em>And we&rsquo;ve also used the Prostate Wel to&hellip;</em></p>
 <ul class="styled-list">
-<li><strong>This prostate solution in 2 months was used to cure Mr Simon enlarged prostate and it was corrected and restored to it original healthy state&hellip;</strong>(his enlarged prostate was normal and there was no sign of prostatis)</li>
+<li><strong>This Prostate Wel in 2 months was used to cure Mr Simon enlarged prostate and it was corrected and restored to it original healthy state&hellip;</strong>(his enlarged prostate was normal and there was no sign of prostatis)</li>
 <li><strong>Help Mr Jude Who Was schedule for a TURP surgery in a month time, and in a month could see a great deal of difference that he cancel the surgery &hellip;</strong> and was heal the month after.</li>
-<li><strong>Transform Mr Damilare who was planning to retire from his occupation as a banker because of the shame attached to  his frequent urination, got the prostate solution bought buy his wife&hellip;.</strong>(Not only he is totally heal but was also promoted at his place of work)</li>
-<li class="buynow"><strong>YOU TOO COULD GET THE PROMOTION YOU DESIRE, GET RID OF THE SHAME, HAVE MORE BEDTIME, ENJOY NIGHT TIME WITH YOUR SPOUSE JUST BY GETTING THE PROSTATE SOLUTION</strong></li>
+<li><strong>Transform Mr Damilare who was planning to retire from his occupation as a banker because of the shame attached to  his frequent urination, got the Prostate Wel bought buy his wife&hellip;.</strong>(Not only he is totally heal but was also promoted at his place of work)</li>
+<li class="buynow"><strong>YOU TOO COULD GET THE PROMOTION YOU DESIRE, GET RID OF THE SHAME, HAVE MORE BEDTIME, ENJOY NIGHT TIME WITH YOUR SPOUSE JUST BY GETTING THE Prostate Wel</strong></li>
 </ul>
 <p>And so on&hellip;..Listen, we could easily fill up this entire page with hundreds of success stories like this&#8230;</p>
-<p>Because we&rsquo;ve used this &lsquo;Prostate solution&rsquo; in almost every case of enlarged prostate and different PSA level.</p>
-<p>In other words, our &ldquo;PROSTATE SOLUTION&rdquo; for prostatis and enlarged prostate is the hottest (and most effective) prostate supplement or drug we&rsquo;ve ever seen for&hellip;</p>
+<p>Because we&rsquo;ve used this &lsquo;Prostate Wel&rsquo; in almost every case of enlarged prostate and different PSA level.</p>
+<p>In other words, our &ldquo;Prostate Wel&rdquo; for prostatis and enlarged prostate is the hottest (and most effective) prostate supplement or drug we&rsquo;ve ever seen for&hellip;</p>
 </div>
 <a class ="consultation" href="https://api.whatsapp.com/send?phone=2349155038724&text=Good%20day,%20This%20is%20Dr%20Micheal.%20It%20is%20your%20free%20consultation%20session" >
 <div class="session">
@@ -599,27 +599,27 @@ loop()
      <p><strong>Secondly, we&rsquo;re not some hack job</strong> company that was started yesterday&#8230;</p>
      <p>Nope, we&rsquo;ve been in the game since 2014, which is like a five-thousand years online&hellip;.</p>
      </div>
-     <p>Now, I imagine you're probably wondering how you can get your hands on <b>Prostate Solution</b> for yourself along with how often you need to take it for best results.</p>
+     <p>Now, I imagine you're probably wondering how you can get your hands on <b>Prostate Wel</b> for yourself along with how often you need to take it for best results.</p>
      <p>What would that be worth to you?</p>
      <p>Would it be worth &#8358 50,000 </p>
-     <p>Because that's what it would cost you to buy each individual ingredient on its own and by choosing <b>Prostate Solution</b> you could spare yourself from forking loads of money on expensive and exotic groceries that you might not even like to eat.</p>
+     <p>Because that's what it would cost you to buy each individual ingredient on its own and by choosing <b>Prostate Wel</b> you could spare yourself from forking loads of money on expensive and exotic groceries that you might not even like to eat.</p>
      <p>Now, &#8358 50,000 considering your options  should seem like a steal to you, which honestly I think is extremely fair.</p>
      <p>It's less than what you'd pay for fancy exotic groceries that you don't even like eating.</p>
-     <p>Plus considering that it takes our manufacturing facility 3 whole months to source and produce just a single batch of <b>Prostate Solution</b> and that each capsule contains the purest and most bioavailable form of these prostate-supporting power foods in existence...</p>
+     <p>Plus considering that it takes our manufacturing facility 3 whole months to source and produce just a single batch of <b>Prostate Wel</b> and that each capsule contains the purest and most bioavailable form of these prostate-supporting power foods in existence...</p>
      <p>&#8358 50,000 really is a bargain!</p>
      <p>But even so, I decided to do something never before seen:</p>
-     <p>I'm offering <b>Prostate Solution</b> to the public  through a special Steel Prostate Campaign and why if you act right now and make the life-changing decision to join the more than 1,764 men before you, you can get your hands on <b>Prostate Solution</b> for just &#8358 25,000 per bottle.</p>
+     <p>I'm offering <b>Prostate Wel</b> to the public  through a special Steel Prostate Campaign and why if you act right now and make the life-changing decision to join the more than 1,764 men before you, you can get your hands on <b>Prostate Wel</b> for just &#8358 25,000 per bottle.</p>
      <p>plus you'll also get free shipping today which is a &#8358 3,000 value!</p>
      <p>And the good news keep on coming:</p>
-     <p>With a discounted packaged plan that's only available today where you can get 2 to 3 bottles of <b>Prostate Solution</b> for only &#8358 20,000 per bottle! and a whooping discount of &#8358 10,000 when you buy 3</p>
+     <p>With a discounted packaged plan that's only available today where you can get 2 to 3 bottles of <b>Prostate Wel</b> for only &#8358 20,000 per bottle! and a whooping discount of &#8358 10,000 when you buy 3</p>
      <p>This special discounted package is only being offered to you today through this website as part of my awareness campaign and only while supplies last, plus you'll also get free shipping today which is a &#8358 3,000 value!</p>
      <p>So click the 3-bottle package or any other package you choose below right now to secure your order.</p>
      <p>This is truly one of the most important investments that you'll ever make in your health and well-being.</p>
      <p>Just click the 3-bottle package or any package you choose below right now to start your order.</p>
      <p>you'll enter your order details and within just three business days from now, you'll receive <b>ProstateSolution</b> right to your front door in discreet packaging so no one will have any idea what's in the package.</p>
-     <p>So go ahead and select your package of <b>PROSTATE SOLUTION</b> while there are still bottles in stock.</p>
+     <p>So go ahead and select your package of <b>Prostate Wel</b> while there are still bottles in stock.</p>
      <p>This should be an absolute no-brainer because you're also covered by my 60-day 100% money-back guarantee.</p>
-     <p>Right now, you can get <b>Prostate Solution</b> for just &#8358 25,000 per bottle and for even less than that if you get my popular 3-bottle packages!</p>
+     <p>Right now, you can get <b>Prostate Wel</b> for just &#8358 25,000 per bottle and for even less than that if you get my popular 3-bottle packages!</p>
      <p>It's your decision but this is your last chance.</p>
      </div>
      </div>
@@ -635,11 +635,11 @@ loop()
       <div class="py-lg-3"></div>
       <div class="d-lg-block d-none">
       <h1 class="py-3"><b>Money Back Guarantee</b></h1>
-      <h4>If, for any reason, you're not happy with your results using PROSTATE SOLUTION, simply email our <b>U.S-based customer service team 24/7</b> , within the first <b>60 days</b> from your purchase, and we will give you a prompt and immediate refund.</h4>
+      <h4>If, for any reason, you're not happy with your results using Prostate Wel, simply email our <b>U.S-based customer service team 24/7</b> , within the first <b>60 days</b> from your purchase, and we will give you a prompt and immediate refund.</h4>
       </div>
       <div class="d-lg-none d-block">
       <h3 class="py-3"><b>Money Back Guarantee</b></h3>
-      <p>If, for any reason, you're not happy with your results using PROSTATE SOLUTION, simply email our <b>customer service team 24/7</b> , within the first <b>60 days</b> from your purchase, and we will give you a prompt and immediate refund.</p>
+      <p>If, for any reason, you're not happy with your results using Prostate Wel, simply email our <b>customer service team 24/7</b> , within the first <b>60 days</b> from your purchase, and we will give you a prompt and immediate refund.</p>
       </div>
       </div>
       </div>
