--- a/buy.html
+++ b/buy.html
@@ -10,12 +10,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- CSS only -->
+
+
 <title>
 LASTING SOLUTION TO PROSTRATE ENLARGEMENT</title>
 <meta name="description" content=" learn how to shrink prostate enlargement, cure enlarged prostate, end painful urination and other Uti">
 <meta name ="keywords"
-content="prostate,prostate cure, prostate disaease,prostate enlargement,painful urination,urine,frequent urination,urine,prostatitis">
-
+content="prostate,prostate cure, prostate diaease,prostate enlargement,painful urination,urine,frequent urination,urine,prostatitis">
+<meta name="google-site-verification" content="vgA1bREs25Ir9dt-okE1W1crU0TemGlVudhgV79k9ss" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
 integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,8 +31,9 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
     <i class="fa fa-whatsapp my-float"></i>
    </a>
     <link rel ="canonical" href="blives.xyz/index.html"/>
-   <link rel="stylesheet" type="text/css" href="blives.css">
-     <script src="https://kit.fontawesome.com/d014c6785f.js" crossorigin="anonymous"></script>
+   <link rel="stylesheet" type="text/css" href="boblives.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
      <script stype="text/javascript">
      function validateemail(){
     var x=document.Myform.email.value;
@@ -61,27 +65,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-<div class="Free">FREE STANDARD SHIPPING FOR OUR CUSTOMERS</div>
+
 <nav class="navbar navbar-expand-md">
    <a class="navbar-brand" href="index.html">
-   <img class="logo" src="img/name.png" alt="PROSTATE SOLUTION"/></a>
-        <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#main-navigation">
+   <img class="logo" src="img/logo.png" alt="Prostate Wel"/></a>
+        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
       	   <span class="navbar-toggler-icon"></span>
    </button>
    <div class="collapse navbar-collapse" id="main-navigation">
      <ul class="navbar-nav">
       	<li class="nav-item">
-          <a class="navlink" href="index.html"><b>THE PROSTATE SOLUTION</b></a>  
+          <a class="navlink" href="index.html"> Home </a>  
         </li>  
-      <li class="nav-item">  
-        <a class="navlink" href="blog.html"> <b>MY PROSTATE</b> </a>  
+      <li>  
+        <a class="navlink" href="blog.html"> Blog </a>  
        </li>  
-      <li class="nav-item">  
-         <a class="navlink" href="about.html"> <b>About </b></a>  
+      <li>  
+         <a class="navlink" href="about.html"> About </a>  
         </li>  
       </ul>
     </div>
 </nav> 
+
 <hr>
 <h3><center>Clinical Strenght</center></h3>
 <h3 class="offer"> ENJOY MASSIVE DISCOUNT <br>
@@ -114,7 +119,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    <script type="text/javascript">000000
    function countdown() {
    const today = new Date();
-   var offerDate = new Date('29 May 2022');
+   var offerDate = new Date('12 July 2022');
    
    //If offer ends reset to new value
    if (today.getSeconds() == offerDate.getSeconds()) {
@@ -228,15 +233,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    </div>
    <h3><center>Choose Quantity Required</center></h3>
    <input type="radio" name="amount" value="1bottle" id="1bottle" />
-   <label  for="1bottle"><span></span><b>One bottle of the PROSTATE SOLUTION &#8358 20,000</b> </label>
+   <label  for="1bottle"><span></span><b>One bottle of the Prostate Wel &#8358 20,000</b> </label>
    <input type="radio" name="amount" value="2bottle" id="2bottle" />
-   <label for="2bottle"><span></span><b>Two bottles of the PROSTATE SOLUTION &#8358 30,000</b></label>
+   <label for="2bottle"><span></span><b>Two bottles of the Prostate Wel &#8358 30,000</b></label>
    
    <input type="radio" name="amount" value="3bottle" id="3bottle" />
-   <label for="3bottle"><span></span><b> Three bottles of the PROSTATE SOLUTION &#8358 40,000</b> </label>
+   <label for="3bottle"><span></span><b> Three bottles of the Prostate Wel &#8358 40,000</b> </label>
    
    <input type="radio" name="amount" value="4bottle" id="4bottle" />
-   <label for="4bottle"><span></span><b> Four bottles of the PROSTATE SOLUTION &#8358 50,000</b> </label>
+   <label for="4bottle"><span></span><b> Four bottles of the Prostate Wel &#8358 50,000</b> </label>
    
    
    <div class="input-cnt">
@@ -247,7 +252,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    <div class="page-main product-page full-section">
    <div class="row product-title-wl">
    <div class="col-sm-12 title-nav">
-   <h2 data-nav-label="Clinical Benefits">PROSTATE SOLUTION contains ingredients clinically proven to:</h2></div>
+   <h2 data-nav-label="Clinical Benefits">Prostate Wel contains ingredients clinically proven to:</h2></div>
    </div>
    <div class="row product-section-wrapper product-des-wrapper">
    <div class="col-md-6 no-pad-left-right-xs">
@@ -258,7 +263,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    </div></div><div class="col-md-9 col-lg-10 col-9">
    <h3>Reduce the size of the Prostate</h3>
    <p><span style="font-weight: 400;">
-   Prostate Solution is formulated with natural 5 alpha-reductase 
+   Prostate Wel is formulated with natural 5 alpha-reductase 
    inhibitors which have been proven to reduce 
    the size of the prostate gland in multiple double blind,
     and placebo controlled clinical trials
@@ -291,7 +296,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="col-md-9 col-lg-10 col-9">
       <h3 class="green-text">Promotes Optimal Prostate Health</h3>
-      <p><span style="font-weight: 400;">The key active ingredients in Prostate Solution For The Prostate are clinically proven to be effective in combating BPH 
+      <p><span style="font-weight: 400;">The key active ingredients in Prostate Wel For The Prostate are clinically proven to be effective in combating BPH 
       symptoms and helping you to restore optimal prostate health.</span>.</p>
       </div></div></div>
       <div class="col-md-6 no-pad-left-right-xs"><div class="row urinary product-des">
